added some fixes, santity checks and improved descriptions in bundle_descriptor.xml